# otus-spacebattle

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: otus_workflow.yml
src/: .env.template  config.py  game_object.py  main.py  vectors.py
src/adapters/: __init__.py  queue.py
src/authentication/: main.py
src/authentication/dispatchers/: base.py
src/authentication/token/: jwt_auth.py
src/authentication/workers/: base.py  rabbitmq.py
src/commands/: __init__.py  base.py  fuel_dependent.py  interpret.py  loggers.py  macro_commands.py  move.py  multithreading.py  register.py  repeats.py  rotate.py
src/consumers/: base.py  rabbitmq.py
src/dependencies/: __init__.py  containers.py
src/dispatchers/: base.py
src/exceptions/: __init__.py  command.py  fuel_dependent.py  move.py  multithreading.py  rotate.py
src/factories/: __init__.py  base.py  creator.py  forward.py  forward_with_rotate.py  fuel_dependent.py  interpret.py  loggers.py  macro_commands.py  move.py  multithreading.py  repeats.py  rotate.py
src/game/: game_object.py  main.py  vectors.py
src/game/adapters/: __init__.py  queue.py
src/game/commands/: __init__.py  base.py  check_collision.py  fuel_dependent.py  interpret.py  loggers.py  macro_commands.py  move.py  multithreading.py  register.py  repeats.py  rotate.py
src/game/consumers/: rabbitmq.py
src/game/dependencies/: __init__.py  base.py  command_container.py  containers.py  game_objects_container.py  services_container.py
src/game/dispatchers/: base.py
src/game/exceptions/: __init__.py  auth.py  command.py  fuel_dependent.py  game_map.py  move.py  rotate.py
src/game/factories/: __init__.py  base.py  creator.py  fuel_dependent.py  interpret.py  loggers.py  macro_commands.py  move.py  multithreading.py  repeats.py  repository.py  rotate.py  workers.py
src/game/handlers/: __init__.py  base.py  exception.py  state.py
src/game/interfaces/: __init__.py  movements.py  queue.py
src/game/managers/: __init__.py  queue.py
src/game/repositories/: __init__.py  auth.py  base.py  utils.py
src/game/workers/: __init__.py  rabbitmq.py
src/handlers/: __init__.py  exception.py
src/interfaces/: __init__.py  fuel_dependent.py  movements.py  queue.py
src/interpreter/: __init__.py  base.py  command.py
src/logger/: __init__.py  settings.py
src/managers/: __init__.py  base.py  queue.py
tests/: utils.py
tests/commands/fuel_dependent/: test_burn_fuel.py  test_check_fuel.py
tests/commands/loggers/: test_logging.py
tests/commands/macro_commands/: test_forward.py  test_forward_with_rotate.py
tests/commands/movements/: test_change_velocity.py  test_move.py  test_rotate.py
tests/commands/multithreading/: test_hard_stop.py  test_soft_stop.py
tests/commands/repeats/: test_double_repeat.py  test_repeat.py
tests/fuel_dependent/: test_burn_fuel.py  test_check_fuel.py
tests/game/commands/fuel_dependent/: test_burn_fuel.py  test_check_fuel.py
tests/game/commands/loggers/: test_logging.py
tests/game/handlers/: test_exception.py
tests/game/interpreter/: test_invalid_params.py  test_valid_params.py
tests/game/managers/: test_queue.py
tests/handlers/: test_exception.py
tests/macro_commands/: test_forward_movement.py  test_moving_forward_with_rotate.py
tests/managers/: test_queue.py
tests/movements/: test_change_velocity.py  test_move.py  test_rotate.py
(+11 files in other folders)
