[tool.poetry]
name = "otus-spacebattle"
version = "0.1.0"
description = ""
authors = ["Fedor Obolikhin <fedor.obolikhin@amonitoring.ru>"]
readme = "README.md"
packages = [{include = "otus_spacebattle"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
