[tool.black]
line-length = 120

[tool.poetry]
name = "otus-spacebattle"
version = "0.1.0"
description = "Выработка навыка применения SOLID принципов на примере игры 'Космическая битва'"
authors = ["Fedor Obolikhin <fedor.obolikhin@amonitoring.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pytest = "^7.2.2"
black = "^23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
